# amazon-textract-transformer-pipeline

./: .editorconfig  .gitignore  CUSTOMIZATION_GUIDE.md  LICENSE-SUMMARY  README.md  cdk.json  cdk_app.py  cdk_demo_stack.py  package-lock.json  package.json  pyproject.toml  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.infrastructure/: attp-bootstrap.cfn.yaml
.workshop-infra/: Makefile  README.md  sam-postproc.py  template.sam.yaml
.workshop-infra/fn-codebuild-run/: main.py  requirements.txt
.workshop-infra/fn-domain/: main.py  vpctools.py
.workshop-infra/fn-user/: main.py
.workshop-infra/fn-usersetup/: main.py  requirements.txt
.workshop-infra/lambda-common/: cfnresponse.py  requirements.txt
annotation/: __init__.py
annotation/fn-SMGT-Post/: data_model.py  main.py  smgt.py
annotation/fn-SMGT-Pre/: main.py
notebooks/: 1. Data Preparation.ipynb  2. Model Training.ipynb  3. Human Review.ipynb  Optional Extras.ipynb  Workshop.ipynb
notebooks/annotation/: ocr-bbox-and-validation.liquid.tpl.html
notebooks/custom-containers/preproc/: Dockerfile
notebooks/custom-containers/train-inf/: Dockerfile
notebooks/preproc/: Dockerfile  __init__.py  imgclean.py  inference.py  ocr.py  preproc.py
notebooks/preproc/textract_transformers/: __init__.py  file_utils.py  image_utils.py  ocr.py  preproc.py
notebooks/review/: .eslintrc.cjs  .gitignore  README.md  fields-validation-legacy.liquid.html  fields-validation.liquid.html  index-noliquid.html  index.html  package-lock.json  package.json  task-input.example.json  tsconfig.json  vite.config.js
notebooks/review/src/: App.vue  main.ts
notebooks/review/tools/: vite-plugin-nomodule.ts
notebooks/src/: __init__.py  config.py  data.py  ddp_launcher.py  inference.py  inference_seq2seq.py  requirements.txt  smtc_launcher.py  train.py
notebooks/src/code/: __init__.py  config.py  inference.py  inference_seq2seq.py  logging_utils.py  smddpfix.py  (+1 more)
notebooks/util/: __init__.py  deployment.py  ocr.py  postproc  preproc.py  project.py  s3.py  smgt.py  training.py  uid.py  viz.py
pipeline/: __init__.py  config_utils.py  iam_utils.py
pipeline/enrichment/: __init__.py
pipeline/fn-trigger/: main.py  requirements.txt
pipeline/ocr/: __init__.py  sagemaker_ocr.py  textract_ocr.py
pipeline/postprocessing/: __init__.py
pipeline/review/: __init__.py
pipeline/shared/: __init__.py
pipeline/thumbnails/: __init__.py
(+48 files in other folders)
