[tool.black]
extend-exclude = "^/(cdk\\.out|setup\\.py)"
line-length = 100

[tool.poetry]
name = "amazon-textract-transformer-pipeline"
version = "0.2.1"
description = "Post-processing Amazon Textract with Transformer-Based Models on Amazon SageMaker"
authors = ["Amazon Web Services"]
license = "MIT-0"

[tool.poetry.dependencies]
python = "^3.8.0"
aws-cdk-lib = "^2.126.0"
"aws-cdk.aws-lambda-python-alpha" = "^2.126.0-alpha.0"
boto3 = "^1.34.33"
botocore = "^1.34.33"
cdk-ecr-deployment = "^2.5.40"
constructs = "^10.3.0"
sagemaker = ">=2.205,<3"
semver = "^3.0.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
black-nb = "^0.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
