[tool.black]
extend-exclude = "^/(cdk\\.out|setup\\.py)"
line-length = 100

[tool.poetry]
name = "amazon-textract-transformer-pipeline"
version = "0.2.1"
description = "Post-processing Amazon Textract with Transformer-Based Models on Amazon SageMaker"
authors = ["Amazon Web Services"]
license = "MIT-0"

[tool.poetry.dependencies]
# numpy 1.25 requires Python <3.12 as per https://stackoverflow.com/a/77935901/13352657
python = "^3.9,<3.12"
aws-cdk-lib = "^2.126.0"
"aws-cdk.aws-lambda-python-alpha" = "^2.126.0-alpha.0"
boto3 = "^1.34.33"
botocore = "^1.34.33"
cdk-ecr-deployment = "^3.0.13"
constructs = "^10.3.0"
sagemaker = ">=2.212,<3"
semver = "^3.0.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
black-nb = "^0.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
